<resources>
    <string name="app_name">MadLibs</string>
    <string name="welcome_text">Welcome to Mad Libs! I will ask you to fill in words to complete a story.
    You won\'t be able to see the whole story until you are done filling in all the missing words.
    That\'s part of the fun. Pick a story and click proceed..</string>
    <string name="proceed">PROCEED!</string>
    <string name="ok">OK</string>
    <string name="words_text">Fill in the words to complete the story!</string>
    <string name="simple">Simple</string>
    <string name="tarzan">Tarzan</string>
    <string name="university">University</string>
    <string name="clothes">Clothes</string>
    <string name="dance">Dance</string>

</resources>
