<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lex.madlips.MainActivity">

    <TextView
        android:text="@string/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        tools:text="@string/welcome_text"
        android:textAlignment="center"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/madlibs"
        android:id="@+id/imageView"
        android:layout_above="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="54dp"
            android:layout_marginStart="54dp"
            android:id="@+id/radio">

            <RadioButton
                android:text="@string/simple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/option_simple"
                android:layout_weight="1"
                tools:text="@string/simple"
                android:onClick="RadioClicked"/>

            <RadioButton
                android:text="@string/tarzan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/option_tarzan"
                android:layout_weight="1"
                tools:text="@string/tarzan"
                android:onClick="RadioClicked"/>

            <RadioButton
                android:text="@string/university"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/option_university"
                android:layout_weight="1"
                tools:text="@string/university"
                android:onClick="RadioClicked"/>

            <RadioButton
                android:text="@string/clothes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/option_clothes"
                android:layout_weight="1"
                tools:text="@string/clothes"
                android:onClick="RadioClicked"/>

            <RadioButton
                android:text="@string/dance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/option_dance"
                android:layout_weight="1"
                tools:text="@string/dance"
                android:onClick="RadioClicked"/>

        </RadioGroup>

        <Button
            android:text="@string/proceed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/proceed_button"
            tools:text="@string/proceed"
            style="@android:style/Widget.Button"
            android:visibility="visible"
            android:onClick="GoToWords"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="46dp"
            android:layout_marginEnd="46dp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

</RelativeLayout>
